--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/DigiRevolution (2).png" />
+    <link rel="icon" type="image/png" href="/digirevolution-favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DigiRevolution - Digital Transformation Solutions</title>
     <meta name="description" content="Leading digital transformation company providing innovative solutions for modern businesses" />
